Facility Controller modified